[package]
name = "pythia"
version = "0.0.1"
edition = "2021"

[dependencies]
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc.git", branch = "master", features = [
    "use-serde",
    "serde",
] }
actix-web = "4.4.1"
async-trait = "0.1.53"
bitcoin = { version = "0.29.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
derive_more = "0.99.17"
displaydoc = "0.2"
dlc = { git = "https://github.com/p2pderivatives/rust-dlc.git", branch = "master", features = [
    "serde",
] }
env_logger = "0.10.2"
hex = "0.4"
humantime = "2.1.0"
lightning = "0.0.118"
log = "0.4.20"
reqwest = { version = "0.11.10", features = ["json"] }
secp256k1-zkp = { version = "0.7.0", features = [
    "bitcoin_hashes",
    "rand-std",
    "use-serde",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
] }
thiserror = "1.0.31"
tokio = { version = "1.35.1", features = ["time", "macros"] }
actix-cors = "0.7.0"
actix = "0.13.1"
actix-web-actors = "4.2.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
json-rpc-types = "1.3.4"
bytestring = "1.3.1"
cron = "0.12.0"
serde_with = "3.4.0"
futures = { version = "0.3.30", features = ["std"] }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }

[dev-dependencies]
dlc = { git = "https://github.com/p2pderivatives/rust-dlc.git", branch = "master", features = [
    "serde",
] }
